hugo: Fix linewrap codeblock
- Adds white-space: pre on base code block element for proper linewrapping on
Chrome.

To test: go to `docs/howto/embed-files-in-cue-evaluation/` and find the line
with "type=<filetype>" in the Chrome browser. This should not wrap over 2
lines anymore.

Fixes cue-lang/cue#3287

--- a/hugo/assets/scss/base/base.scss
+++ b/hugo/assets/scss/base/base.scss
@@ -340,6 +340,7 @@ code {
     font-style: normal;
     font-weight: inherit;
     line-height: inherit;
+    white-space: pre;
 
     ul &,
     ol &,
